@@ -23,3 +23,4 @@
 20160608 ./watchlist/hia-parse-nodeinfo.sh added.
 20160608 ./watchlist/bithunt-submit.sh added.
 20160608 ./watchlist/hia-parse-proxy.sh added.
+20160608 ./watchlist/hia-parse-ssh.sh added.
